(chores) camel-cloud: use unmodifiable list when possible