@@ -17,7 +17,6 @@
 package org.apache.camel.impl.cloud;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.apache.camel.Exchange;
 import org.apache.camel.cloud.ServiceDefinition;
@@ -26,6 +25,6 @@ import org.apache.camel.cloud.ServiceFilter;
 public class HealthyServiceFilter implements ServiceFilter {
     @Override
     public List<ServiceDefinition> apply(Exchange exchange, List<ServiceDefinition> services) {
-        return services.stream().filter(s -> s.getHealth().isHealthy()).collect(Collectors.toList());
+        return services.stream().filter(s -> s.getHealth().isHealthy()).toList();
     }
 }
